--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,56 +6,70 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
-        <header class="elHeaderBox">
-            <h1>The Gamer's Shire</h1>
-            <div>
-                <img src="../assets/imagenes/Logo final.png" class="elLogo"  alt="logo">
-            </div>
-            <nav>
-                <div class="desplegarNav">
-                    <button class="botonNav">Categorias</button>
-                    <div class="contenidoNav">
-                        <li> <a href="../index.html">Inicio </a></li>
-                        <li> <a href="./gaming.html">Gaming</a></li>
-                        <li> <a href="./videojuegos.html">Videojuegos</a></li>
-                        <li> <a href="./streaming.html">Streaming</a></li>
-                        <li> <a href="#">contacto</a></li>
-                    </div>
+        <header>
+            <nav class="navbar navbar-expand-lg  elHeaderBox">
+                <div class="container-fluid ">
+                  <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
+                  <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active navColor" aria-current="page" href="../index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./gaming.html">Gaming</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./videojuegos.html">Videojuegos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="./streaming.html">Streaming</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link navColor" href="#">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </nav>
+              </nav>
         </header>
         <main>
-            <h2>Contacto</h2>
-            <section>
-                <h3>Suscribite</h3>
-                <p>- Unite a la comarca y con tu suscripcion mensual recibi nuestras ofertas, sorteos, noticias sobre el mundo de la tecnologia y el gaming y muchos beneficios mas. Te esperamos para ser parte de nuestra familia.</p>
-                <form>
+            <h1>The Gamer's Shire</h1>
+            <h2 class="claseH2">Contacto</h2>
+            <section class="container contenedorFlex">
+                <h3 class="subtitulos3 boxSubtitulos">Suscribite</h3>
+                <p class="parrafos">- Unite a la comarca y con tu suscripcion mensual recibi nuestras ofertas, sorteos, noticias sobre el mundo de la tecnologia y el gaming y muchos beneficios mas. Te esperamos para ser parte de nuestra familia.</p>
+                <form >
                     <div>
-                        <input type="text" placeholder="Ingrese su Nombre*" required>
+                        <input type="text" class="claseH2 formulario" placeholder="Ingrese su Nombre*" required>
                     </div>
                     <div>
-                        <input type="email" placeholder="Email*" required>
+                        <input type="email" class="claseH2 formulario" placeholder="Email*" required>
                     </div>
                     <div>
-                        <select>
+                        <select class="claseH2 formulario">
                             <option value="1"> Debito</option>
                             <option value="2">Credito</option>
                             <option value="3">Mercadopago</option>
                         </select>
                     </div>
                     <div>
-                        <input type="submit" value="Enviar">
+                        <input type="submit" class="claseH2 formulario value="Enviar">
                     </div>
                 </form>
             </section>
         </main>
-        <section>
-            <h4>Proximos Eventos</h4>
+        <section class="container contenedorFlex" >
+            <h4 class="subtitulos4">Proximos Eventos</h4>
             <div>
-                <p>21 OCTUBRE 2022
+                <p class="parrafos">21 OCTUBRE 2022
 
                     ARGENTINA GAME SHOW
                     
@@ -67,7 +81,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13141.32391365323!2d-58.3964251!3d-34.5704909!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8e5455ca015bc690!2sArgentina%20Game%20Show!5e0!3m2!1ses!2sar!4v1666131222207!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div>
-                <p>
+                <p class="parrafos">
                     5 NOVIEMBRE 2022
                 
                     EGS 2022 - Entertainment Gaming Show
@@ -78,30 +92,27 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.433665552845!2d-99.17458789999999!3d19.3936599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff718f4416e1%3A0x6e35698f0852629c!2sWorld%20Trade%20Center%20Ciudad%20de%20M%C3%A9xico!5e0!3m2!1ses!2sar!4v1666223674083!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
-    </body>
-    <footer class="elFooter">
-        <div>
-            <p class="parrafos">Nuestras redes</p>
-            <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
-            <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
-            <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
-            <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
-        </div>
-        <div class="absoluteFooter1">
-            <p class="parrafos" >Mas comunidades</p>
-            <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
-            <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
-            <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
-            <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
-        </div>
-        <div>
-            <ul class="absoluteCondiciones">
-                <li>
+        <footer class="container-fluid flexFooter2">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <a href="https://www.instagram.com/" class="linksExternos"  target="_blank">Instragram</a>
+                    <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
+                    <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
+                    <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
+                    <a href="https://www.reddit.com/" class="linksExternos" target="_blank">Reddit</a>
+                    <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
+                    <a href="https://store.steampowered.com/" class="linksExternos" target="_blank">Steam</a>
+                    <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
+                </div>
+                <div class="col-sm-12 col-md-5 col-lg-4">
+                    <p class="parrafos">Todos los derechos reservados - JDL®</p>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-3">
                     <a class="linksExternos href="" >Condiciones de uso</a>
                     <a class="linksExternos href="">Aviso de privacidad </a>
-                </li>
-            </ul>
-            <p class="parrafos absoluteReservados">Todos los derechos reservados - JDL®</p>
-        </div>
-    </footer>
+                </div>
+            </div>
+        </footer>
+        <script src="../js/bootstrap.bundle.min.js"></script>
+    </body>
 </html>
